# DALLE-1

./: .gitignore  README.md  guideline.md  pyproject.toml
configs/: dalle1_256.yaml  dvae_b300_256.yaml  dvae_h200_256.yaml  dvae_probe.yaml  dvae_small.yaml  tiny_test.yaml  transformer_h200_256.yaml  transformer_probe.yaml  transformer_small.yaml
dalle1/: __init__.py  config.py  data.py  dvae.py  generate.py  tokenizer.py  train_dvae.py  train_transformer.py  transformer.py  utils.py
scripts/: cifar10_dvae_experiment.py  slurm_dvae_256.sh  slurm_dvae_b300_256.sh  slurm_dvae_h200_256.sh  slurm_dvae_large_256.sh  slurm_dvae_probe.sh  slurm_transformer_h200_256.sh  slurm_transformer_probe.sh
tests/: test_data.py  test_models.py  test_utils.py
